[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://LobbyEntry.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/Button/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/Card/Card.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/TextInput/TextInput.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/RobotoLight-32px.tres" type="DynamicFont" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LobbyList" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 606.0

[node name="Background" parent="LobbyList" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1012.0
margin_bottom = 480.0

[node name="Lobbies" type="Control" parent="LobbyList"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1012.0
margin_bottom = 480.0

[node name="Label" type="Label" parent="LobbyList"]
margin_left = 46.0346
margin_top = 25.3984
margin_right = 96.0346
margin_bottom = 39.3984
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Games"

[node name="LobbyEntry" parent="LobbyList" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
margin_left = 40.0
margin_top = 75.0
margin_right = 760.0
margin_bottom = 145.0

[node name="Timer" type="Timer" parent="LobbyList"]
wait_time = 3.0
autostart = true

[node name="HostName" parent="LobbyList" instance=ExtResource( 6 )]
margin_left = 20.0
margin_top = 510.0
margin_right = 570.0
margin_bottom = 585.0
rect_min_size = Vector2( 550, 75 )

[node name="HostButton" parent="LobbyList" instance=ExtResource( 4 )]
margin_left = 580.0
margin_top = 510.0
margin_right = -20.0
margin_bottom = 585.0
rect_min_size = Vector2( 200, 75 )
text = "Host"
